style: Fix wrong padding in code blocks

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 
 :root {
     --primary-color: #0461be;
-    --rounded-corner: 12px;
+    --rounded-corner: 9px;
     --fg-color: rgb(0 0 6 / 80%);
     --bg-color: #f5f5f6;
     --term-fg: rgb(0 0 6 / 80%);
@@ -123,12 +123,6 @@ h1 {
     margin: 3rem 0 1rem;
 }
 
-@media screen and (min-width: 650px) {
-    h1 {
-        font-size: 1.6rem;
-    }
-}
-
 h2 {
     font-size: 1.2rem;
 }
@@ -172,15 +166,8 @@ picture.full img {
 
 /* Code */
 
-code {
-    font-size: 80%;
-    background-color: var(--term-bg);
-    border-radius: 6px;
-    border: 6px solid var(--term-bg);
-    padding: 0 2px;
-}
-
 .highlighter-rouge {
+    font-size: 80%;
     line-height: normal;
     padding: 2px 1rem;
     border-radius: var(--rounded-corner);
@@ -195,11 +182,11 @@ code.highlighter-rouge {
     background-color: var(--term-bg);
 }
 
-@media only screen and (max-device-width: 480px) {
-    /* Mobile */
-    .highlighter-rouge {
-        max-width: 80vw;
-    }
+.highlight table td {
+    padding: 5px;
+}
+.highlight table pre {
+    margin: 0;
 }
 
 /* Singletons */
@@ -294,11 +281,23 @@ ul.news .title {
     flex-grow: 1;
 }
 
+@media only screen and (max-device-width: 480px) {
+    /* Mobile */
+    .highlighter-rouge {
+        max-width: 80vw;
+    }
+}
+
 @media screen and (min-width: 650px) {
+    h1 {
+        font-size: 1.6rem;
+    }
+
     ul.news li {
         padding: 0;
         text-align: left;
     }
+
     ul.news li > a {
         flex-direction: row;
         padding: 1rem 3rem;
